# tt-sim

./: README.md  pyproject.toml
driver/: README.md  ex1.py  ex2.py
driver/ex1/: ex1.py
driver/ex2/: ex2.py  main.c
driver/ex3/: crt0.S  ex3.py  linker.ld
driver/ex4/: README.md  ex4.py
driver/ex5/: ex5.py  main.c
driver/simple/: README.md
driver/simple/basic_wormhole/: basic_wormhole.py
driver/simple/ex1/: ex1.py
driver/simple/ex2/: README.md  ex2.py  main.c
driver/simple/ex3/: ex3.py  main.c  makefile
driver/simple/ex4/: ex4.py
driver/simple/ex5/: README.md  ex5.py
driver/wormhole/: README.md  tt_metal.py  tt_metal_0.62.2.json  wormhole.py  wormhole_driver.py
driver/wormhole/firmware/: README.md
driver/wormhole/five/: README.md  five.py  parameters.json
driver/wormhole/five-fp/: README.md  five-fp.py  parameters.json
driver/wormhole/four/: README.md  four.py  parameters.json
driver/wormhole/four-fp/: README.md  four-fp.py  parameters.json
driver/wormhole/loopback/: README.md  loopback.py  parameters.json
driver/wormhole/one/: README.md  one.py  parameters.json
driver/wormhole/three/: README.md  parameters.json  three.py
driver/wormhole/two/: README.md  parameters.json  two.py
tt_sim/device/: clock.py  clockable.py  device.py  device_memory.py  memory_map.py  reset.py  resetable.py  tt_device.py
tt_sim/memory/: mem_mapable.py  memory.py  memory_map.py
tt_sim/misc/: mailbox.py  tile_ctrl.py  ttsync.py
tt_sim/network/: tt_noc.py
tt_sim/pe/: pcbuf.py  pe.py
tt_sim/util/: bits.py  conversion.py  in_out_file.py
(+50 files in other folders)
