[project]
name = "tt-sim"
description = "A simulator for the Tenstorrent architecture"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause" 
authors = [ { name = "Nick Brown" } ]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "numpy"
]

dynamic = [ "version" ]

[project.optional-dependencies]
dev=[]

[tool.ruff]
target-version = "py310"
extend-include = ["*.ipynb", "*.pyi"]
exclude = [".venv", "docs/marimo"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PT", "TID251", "INP", "PYI"]
ignore = [
    "E741",   # https://beta.ruff.rs/docs/rules/ambiguous-variable-name/
    "PT006",  # https://beta.ruff.rs/docs/rules/pytest-parametrize-names-wrong-type/
    "PT012",  # https://beta.ruff.rs/docs/rules/pytest-raises-with-multiple-statements/
    "PYI041", # https://docs.astral.sh/ruff/rules/redundant-numeric-union
]

[tool.ruff.lint.pycodestyle]
max-line-length = 130
